# upside_down_rl

./: .gitignore  README.md  app.py  pages.toml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
old_code/: train_atari_agent.py
old_code/experiment_1/: train_agent.py
old_code/experiment_2/: catch.py  catch_v2.py  catch_v3.py  catch_v4.py  train_catch_cnn_agent.py  utils.py
old_code/experiment_3/q_networks/: a2c.py  ddqn.py  dqn.py  prepare_buffer.py  train_offline_a2c.py  train_offline_ddqn.py  train_offline_dqn.py  utils.py
old_code/experiment_3/q_networks/buffers/CartPole-v0/1/DQN/: memory_buffer.p
old_code/experiment_3/upside_down/: prepare_offline_buffer.py  train_agent.py  train_offline_agent.py  utils.py
resources/Acrobot-v1/: info.json
resources/Acrobot-v1/ExtraTrees/: conf.json  policy.pkl
resources/Acrobot-v1/Neural/: conf.json  policy.pth
resources/Acrobot-v1/RandomForest/: conf.json  policy.pkl
resources/CartPole-v0/: info.json
resources/CartPole-v0/ExtraTrees/: conf.json  policy.pkl
resources/CartPole-v0/Neural/: conf.json  policy.pth
resources/CartPole-v0/RandomForest/: conf.json  policy.pkl
resources/LunarLander-v2/: info.json
resources/LunarLander-v2/ExtraTrees/: conf.json  policy.pkl
resources/LunarLander-v2/Neural/: conf.json  policy.pth
resources/LunarLander-v2/RandomForest/: conf.json  policy.pkl
udrl/: __main__.py  agent.py  buffer.py  cli.py  data_proc.py  inference.py  plot.py  policies.py  test.py  viz.py
udrl/app/: home.py  sim.py
udrl/catch/: __init__.py  adptor.py  core.py  renderer.py
