[tool.black]
line-length = 79 # from pep
target-version = ['py310']

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
plugins = [ "numpy.typing.mypy_plugin" ]

[tool.poetry]
name = "upside-down-rl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
numpy = "1.24.4"
scikit-image = "^0.24.0"
tqdm = "^4.66.5"
torch = "^2.4.1"
streamlit = "^1.39.0"
st-pages = "^1.0.1"
streamlit-javascript = "^0.1.5"
pylatexenc = "^2.10"
streamlit-profiler = "^0.2.4"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"